[package]
name = "bm25-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
bm25 = { version = "2.2.1"}
prost = "0.13.5"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "*"
